Good enough for me at this point

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,25 +1,25 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=1280,720
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=454,32
-Size=550,680
-Collapsed=0
-
-[Window][Hello, world!]
-Pos=60,60
-Size=371,387
-Collapsed=0
-
-[Window][Another Window]
-Pos=201,209
-Size=198,71
-Collapsed=0
-
 [Window][KV-RAT-GUI]
 Pos=0,0
-Size=1280,720
+Size=2560,1440
+Collapsed=0
+
+[Window][Debug##Default]
+Pos=60,60
+Size=2560,1440
+Collapsed=0
+
+[Window][Main Menu]
+Pos=383,264
+Size=313,120
+Collapsed=0
+
+[Window][Client Screen]
+Pos=556,260
+Size=1366,818
+Collapsed=0
+
+[Window][Logs]
+Pos=22,560
+Size=1024,768
 Collapsed=0
 
